webpack loader + frequently used components

--- a/static/sass/variables.sass
+++ b/static/sass/variables.sass
@@ -1,14 +1,17 @@
+//MOBILE
+$tablet-max-width: 1040px
+$phone-max-width: 540px
+
 //FONT
 $def-font-size: 1em
 $def-font-color: #2a2a2a
-// $font-ratio: 1.61803398875
-$font-ratio: 1.25
+$font-ratio: 1.618
 
 $transparent-color: rgba(255, 255, 255, 0)
 
 //CONTAINER
 $container-width: 1240px
-$container-border: calc((100vw - 1240px) / 2)
+$container-padding: 10px
 
 //DIVS
 $input-padding: 2px 10px
