--- a/static/sass/base.sass
+++ b/static/sass/base.sass
@@ -19,12 +19,10 @@
   box-sizing: border-box
   margin: 0
   padding: 0
-  line-height: $font-ratio
+  font-size: $def-font-size
+  // line-height: $font-ratio
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
-
-body, html
-  font-size: $def-font-size
 
 a
   text-decoration: none
@@ -48,6 +46,7 @@ h1, h2, h3, h4, h5, h6
     font-weight: 800
 p, span
   font-size: $def-font-size
+  line-height: $font-ratio
 small
   font-size: $def-font-size / $font-ratio
 
@@ -141,13 +140,16 @@ input
 
 
 // MODIFICATORS
-.hidden
+@mixin hidden
   visibility: hidden
   position: absolute
-
-.visible
+.hidden
+  @include hidden
+@mixin visible
   visibility: visible
-.invisible
+.visible
+  @include visible
+@mixin invisible
   visibility: hidden !important
   width: 0 !important
   height: 0 !important
@@ -156,6 +158,8 @@ input
   padding: 0 !important
   border: 0 !important
   display: none !important
+.invisible
+  @include invisible
 
 .noselect 
   -webkit-touch-callout: none;  /* iOS Safari */
