--- a/static/sass/design.sass
+++ b/static/sass/design.sass
@@ -1,8 +1,9 @@
 @import 'variables.sass'
+@import 'base.sass'
 
 // @font-face
-//   font-family: "Rostov"
-//   src: url("../fonts/Rostov.ttf")
+//   font-family: 'Font'
+//   src: url("./../fonts/Font.ttf")
 
 *
   font-family: Arial, Helvetica, sans-serif
@@ -16,3 +17,4 @@ h1, h2, h3, h4, h5, h6
 
 .container
   max-width: $container-width
+  padding: 0 $container-padding
