--- a/static/sass/components/Hamburger.sass
+++ b/static/sass/components/Hamburger.sass
@@ -5,8 +5,7 @@
  * @site https://jonsuh.com/hamburgers
  * @link https://github.com/jonsuh/hamburgers
  */
-
-$hamburger-color: black
+@import '../variables.sass'
 
 .hamburger
   width: 70px
