--- a/static/sass/variables.sass
+++ b/static/sass/variables.sass
@@ -1,10 +1,12 @@
 //MOBILE
 $tablet-max-width: 1040px
 $phone-max-width: 540px
+$hamburger-color: #ffffff
 
 //FONT
 $def-font-size: 1em
 $def-font-color: #2a2a2a
+// $font-ratio: 1.61803398875
 $font-ratio: 1.618
 
 $transparent-color: rgba(255, 255, 255, 0)
