--- a/static/sass/components/Hamburger.sass
+++ b/static/sass/components/Hamburger.sass
@@ -33,15 +33,10 @@ $hamburger-between: ($hamburger-height - $hamburger-padding * 2 - $hamburger-thi
   border: 0
   margin: 0
   overflow: visible
-  @media (hover: hover)
-    &:hover 
-      opacity: 0.7 
-    &.is-active:hover 
-      opacity: 0.7 
-  &.is-active .hamburger-inner,
-  &.is-active .hamburger-inner::before,
-  &.is-active .hamburger-inner::after 
-    background-color: $hamburger-color
+  &.is-active
+    .hamburger-inner
+      &, &::before, &::after
+        background-color: $hamburger-color
 
 .hamburger-box 
   width: 100%
@@ -73,59 +68,59 @@ $hamburger-between: ($hamburger-height - $hamburger-padding * 2 - $hamburger-thi
 /*
    * 3DX
    */
-.hamburger--3dx .hamburger-box 
-  perspective: 80px 
-
-.hamburger--3dx .hamburger-inner 
-  transition: transform 0.15s cubic-bezier(0.645, 0.045, 0.355, 1), background-color 0s 0.1s cubic-bezier(0.645, 0.045, 0.355, 1) 
-.hamburger--3dx .hamburger-inner::before, .hamburger--3dx .hamburger-inner::after 
-  transition: transform 0s 0.1s cubic-bezier(0.645, 0.045, 0.355, 1) 
-
-.hamburger--3dx.is-active .hamburger-inner 
-  background-color: transparent !important
-  transform: rotateY(180deg) 
-.hamburger--3dx.is-active .hamburger-inner::before 
-  transform: translate3d(0, $hamburger-between, 0) rotate(45deg) 
-.hamburger--3dx.is-active .hamburger-inner::after 
-  transform: translate3d(0, -$hamburger-between, 0) rotate(-45deg) 
+.hamburger--3dx
+  .hamburger-box
+    perspective: 80px 
+  .hamburger-inner 
+    transition: transform 0.15s cubic-bezier(0.645, 0.045, 0.355, 1), background-color 0s 0.1s cubic-bezier(0.645, 0.045, 0.355, 1) 
+    &::before, &::after 
+      transition: transform 0s 0.1s cubic-bezier(0.645, 0.045, 0.355, 1) 
+  &.is-active
+    .hamburger-inner 
+      background-color: transparent !important
+      transform: rotateY(180deg) 
+    &::before 
+      transform: translate3d(0, $hamburger-between, 0) rotate(45deg) 
+    &::after 
+      transform: translate3d(0, -$hamburger-between, 0) rotate(-45deg) 
 
 /*
    * 3DX Reverse
    */
-.hamburger--3dx-r .hamburger-box 
-  perspective: 80px 
-
-.hamburger--3dx-r .hamburger-inner 
-  transition: transform 0.15s cubic-bezier(0.645, 0.045, 0.355, 1), background-color 0s 0.1s cubic-bezier(0.645, 0.045, 0.355, 1) 
-.hamburger--3dx-r .hamburger-inner::before, .hamburger--3dx-r .hamburger-inner::after 
-  transition: transform 0s 0.1s cubic-bezier(0.645, 0.045, 0.355, 1) 
-
-.hamburger--3dx-r.is-active .hamburger-inner 
-  background-color: transparent !important
-  transform: rotateY(-180deg) 
-.hamburger--3dx-r.is-active .hamburger-inner::before 
-  transform: translate3d(0, $hamburger-between, 0) rotate(45deg) 
-.hamburger--3dx-r.is-active .hamburger-inner::after 
-  transform: translate3d(0, -$hamburger-between, 0) rotate(-45deg) 
+.hamburger--3dx-r
+  .hamburger-box 
+    perspective: 80px 
+  .hamburger-inner 
+    transition: transform 0.15s cubic-bezier(0.645, 0.045, 0.355, 1), background-color 0s 0.1s cubic-bezier(0.645, 0.045, 0.355, 1) 
+    &::before, &::after 
+      transition: transform 0s 0.1s cubic-bezier(0.645, 0.045, 0.355, 1) 
+  &.is-active
+    .hamburger-inner 
+      background-color: transparent !important
+      transform: rotateY(-180deg) 
+      &::before 
+        transform: translate3d(0, $hamburger-between, 0) rotate(45deg) 
+      &::after 
+        transform: translate3d(0, -$hamburger-between, 0) rotate(-45deg) 
 
 /*
    * 3DY
    */
-.hamburger--3dy .hamburger-box 
-  perspective: 80px 
-
-.hamburger--3dy .hamburger-inner 
-  transition: transform 0.15s cubic-bezier(0.645, 0.045, 0.355, 1), background-color 0s 0.1s cubic-bezier(0.645, 0.045, 0.355, 1) 
-.hamburger--3dy .hamburger-inner::before, .hamburger--3dy .hamburger-inner::after 
-  transition: transform 0s 0.1s cubic-bezier(0.645, 0.045, 0.355, 1) 
-
-.hamburger--3dy.is-active .hamburger-inner 
-  background-color: transparent !important
-  transform: rotateX(-180deg) 
-.hamburger--3dy.is-active .hamburger-inner::before 
-  transform: translate3d(0, $hamburger-between, 0) rotate(45deg) 
-.hamburger--3dy.is-active .hamburger-inner::after 
-  transform: translate3d(0, -$hamburger-between, 0) rotate(-45deg) 
+.hamburger--3dy
+  .hamburger-box
+    perspective: 80px
+  .hamburger-inner
+    transition: transform 0.15s cubic-bezier(0.645, 0.045, 0.355, 1), background-color 0s 0.1s cubic-bezier(0.645, 0.045, 0.355, 1)
+    &::before, &::after
+      transition: transform 0s 0.1s cubic-bezier(0.645, 0.045, 0.355, 1)
+  &.is-active
+    .hamburger-inner
+      background-color: transparent !important
+      transform: rotateX(-180deg)
+      &::before
+        transform: translate3d(0, $hamburger-between, 0) rotate(45deg)
+      &::after
+        transform: translate3d(0, -$hamburger-between, 0) rotate(-45deg)
 
 /*
    * 3DY Reverse
