--- a/static/sass/base.sass
+++ b/static/sass/base.sass
@@ -79,6 +79,7 @@ input
 //FUNCTIONAL TAGS
 .container
   height: 100%
+  width: 100%
   margin: auto
   margin-top: 0
   margin-bottom: 0
@@ -134,6 +135,10 @@ input
   float: left
 .fifth
   width: 20%
+  overflow-y: auto
+  float: left
+.sixth
+  width: 16.1616%
   overflow-y: auto
   float: left
 
