--- a/static/sass/design.sass
+++ b/static/sass/design.sass
@@ -1,17 +1,23 @@
 @import 'variables.sass'
 @import 'base.sass'
 
-// @font-face
-//   font-family: 'Font'
-//   src: url("./../fonts/Font.ttf")
+@font-face
+  font-family: 'NotoSans'
+  src: url("./../fonts/NotoSans/NotoSans-Regular.ttf")
+@font-face
+  font-family: 'NotoSansBold'
+  src: url("./../fonts/NotoSans/NotoSans-Bold.ttf")
+@font-face
+  font-family: 'MontserratBlack'
+  src: url("./../fonts/Montserrat/Montserrat-Black.ttf")
 
 *
   font-family: Arial, Helvetica, sans-serif
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: 'NotoSans', sans-serif;
   color: $def-font-color
 
 h1, h2, h3, h4, h5, h6
-  font-family: 'Roboto', sans-serif
+  font-family: 'MontserratBlack', sans-serif
   text-align: center
   font-weight: 700
 
