--- a/static/sass/variables.sass
+++ b/static/sass/variables.sass
@@ -10,8 +10,11 @@ $font-ratio: 1.618
 $transparent-color: rgba(255, 255, 255, 0)
 
 //CONTAINER
-$container-width: 1240px
+$container-width: 1024px
 $container-padding: 10px
 
 //DIVS
 $input-padding: 2px 10px
+
+//COLORS
+$orange: #ffa300
